--- a/prj.conf
+++ b/prj.conf
@@ -4,3 +4,7 @@ CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_PRINTK=y
 CONFIG_MAIN_STACK_SIZE=2048
+
+CONFIG_DISK_DRIVER_SDMMC=y
+CONFIG_SPI=y
+
