--- a/boards/nrf52840dk_nrf52840.conf
+++ b/boards/nrf52840dk_nrf52840.conf
@@ -4,13 +4,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-
-CONFIG_DISK_ACCESS=y
-CONFIG_LOG=y
-CONFIG_FILE_SYSTEM=y
-CONFIG_FAT_FILESYSTEM_ELM=y
-CONFIG_PRINTK=y
-CONFIG_MAIN_STACK_SIZE=2048
-
-CONFIG_DISK_DRIVER_SDMMC=y
-CONFIG_SPI=y
+CONFIG_DISK_DRIVERS=y
+CONFIG_DISK_DRIVER_FLASH=y
+# There may be no files on internal SoC flash, so this Kconfig
+# options has ben enabled to create some if listing does not
+# find in the first place.
+CONFIG_FS_SAMPLE_CREATE_SOME_ENTRIES=y
